Setup AWS s3, part 2

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ export AWS_S3_BUCKET=elx-rent-cars
 export AWS_ACCESS_KEY_ID=AKIAZ3ABK6HAQN7BQXPR
 export AWS_SECRET_ACCESS_KEY=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
 export AWS_REGION=us-east-2
+export AWS_SCHEME=https://
+export AWS_HOST=elx-rent-cars.s3.us-east-2.amazonaws.com
